<resources>
    <string name="app_name">AlertMe Android</string>
    <string name="app_name_behaviour">AlertMe Android - Alarm Mode</string>
    <string name="app_name_people">AlertMe Android - People</string>
    <string name="app_name_sensors">AlertMe Android - Sensors</string>
    <string name="app_name_settings">AlertMe Android - Settings</string>
    <string name="app_name_history">AlertMe Android - History</string>
    <string name="app_name_help">AlertMe Android - Help</string>
    <string name="home_command_update_systemname">Updating details</string>
    <string name="home_command_update_behaviour">Updating behaviour</string>
    <string name="home_command_update_people">Updating people</string>
    <string name="home_command_update_sensors">Updating sensors</string>
    <string name="home_command_update_history">Updating event history</string>
    <string name="sensor_list_isempty">No sensors detected</string>
    <string name="event_list_isempty">No events found in history</string>
    <string name="keyfob_list_isempty">No keyfobs detected</string>
    <string name="home_icontitle_behaviour">Behaviour</string>
    <string name="home_icontitle_people">People</string>
    <string name="home_icontitle_sensors">Sensors</string>
    <string name="home_icontitle_settings">Settings</string>
    <string name="home_icontitle_history">History</string>
    <string name="home_icontitle_help">Help</string>
    <string name="event_list_default_time">HH:MM:SSy</string>
    <string name="event_list_default_mesg">Event message</string>
    <string name="behaviour_dialog_dismiss">Ok</string>
    <string name="behaviour_dialog_message_offline">Sorry, I cannot connect to the hub at the moment. Please try again later.</string>
    <string name="behaviour_dialog_message_home_ok">Current mode is At Home</string>
    <string name="behaviour_dialog_message_away_ok">Current mode is Away</string>
    <string name="behaviour_dialog_message_night_ok">Current mode is Night</string>
    <string name="behaviour_dialog_message_change_mode">Change current mode to:</string>
    <string name="behaviour_busy_message_home">Setting mode to At Home</string>
    <string name="behaviour_busy_message_away">Setting mode to Away</string>
    <string name="behaviour_busy_message_night">Setting mode to Night</string>
    <string name="behaviour_dialog_message_home_fail">Could not set the mode to Home. Please try again later.</string>
    <string name="behaviour_dialog_message_away_fail">Could not set the mode to Away. Please try again later.</string>
    <string name="behaviour_dialog_message_night_fail">Could not set the mode to Night. Please try again later.</string>
    <string name="behaviour_current_is_home">Currently set to HOME</string>
    <string name="behaviour_current_is_away">Currently set to AWAY mode</string>
    <string name="behaviour_current_is_night">Currently set to NIGHT mode</string>
    <string name="behaviour_current_is_offline">Currently cannot reach the hub; try again later</string>
    <string name="behaviour_update_canceled">Cancelled: changes to settings abandoned</string>
    <string name="behaviour_update_ok">Updated mode; loading details</string>
    <string name="behaviour_alarm_cancel_emergency">Cancel Emergency</string>
    <string name="behaviour_alarm_cancel_intruder">Cancel Alarm</string>
    <string name="behaviour_alarm_active">Alarm activated</string>
    <string name="behaviour_mode_cancel">Cancel</string>
    <string name="behaviour_mode_disarm">Disarm</string>
    <string name="behaviour_mode_setaway">Set as away</string>
    <string name="behaviour_mode_setnight">Set night mode</string>
    <string name="eventlist_end_armedby"> armed the alarm</string>
    <string name="eventlist_end_disarmedby"> disarmed the alarm</string>
    <string name="eventlist_mode_change">Mode changed to</string>
    <string name="alarm_intruder_stopping">Clearing intruder alarm</string>
    <string name="alarm_emergency_stopping">Clearing emergency alarm</string>
    <string name="alarm_stopped_ok">Cleared alarm successful</string>
    <string name="alarm_stopped_fail">Failed to clear alarm</string>
    <string name="systemname_default">AlertMe for Android</string>
    <string name="behaviour_unavailable">Unavailable</string>
    <string name="behaviour_home">Home</string>
    <string name="behaviour_away">Armed</string>
    <string name="behaviour_night">Night</string>
    <string name="people_default_fobname">keyfob name</string>
    <string name="people_default_fobstatus">status</string>
    <string name="people_fob_away">Away</string>
    <string name="people_fob_home">At home</string>
    <string name="sensor_device_presence_away">Away</string>
    <string name="sensor_device_presence_present">Present</string>
    <string name="sensor_device_door_open">Open</string>
    <string name="sensor_device_door_closed">Closed</string>
    <string name="sensor_device_tampered">Not Ok</string>
    <string name="sensor_device_nottampered">All Ok</string>
    <string name="sensor_device_batterylow">Battery low</string>
    <string name="people_unavailable">No one home</string>
    <string name="people_none_present">No one home</string>
    <string name="people_all_present">All home</string>
    <string name="people_count_tag">COUNT</string>
    <string name="people_single_present">1 person home</string>
    <string name="people_multiple_present">COUNT people home</string>
    <string name="sensor_count_tag">COUNT</string>
    <string name="sensor_single_missing">Not ok</string>
    <string name="sensor_multiple_missing">Not ok</string>
    <string name="sensor_none_missing">All ok</string>
    <string name="login_title_add">Add new account details</string>
    <string name="login_title_edit">Edit the current account details</string>
    <string name="login_title_add_firsttime">AlertMe account details</string>
    <string name="settings_hub_is_intruderalarm">Warning: Intruder detected</string>
    <string name="settings_hub_is_emergencyalarm">Warning: Emergency detected</string>
    <string name="settings_update_fail">Failed to update the given account settings</string>
    <string name="settings_update_ok">Saved account setting changes</string>
    <string name="settings_create_ok">Saved account setting changes</string>
    <string name="settings_update_canceled">Cancelled: changes to settings abandoned</string>
    <string name="settings_updating_values">Saving account details</string>
    <string name="settings_login_username_label">Username</string>
    <string name="settings_login_password_label">Password</string>
    <string name="settings_main_title">Settings</string>
    <string name="settings_default_username">Login name</string>
    <string name="settings_default_password">Password</string>
    <string name="settings_button_ok">Ok</string>
    <string name="settings_button_cancel">Cancel</string>
    <string name="settings_title_setup">Setup</string>
    <string name="hubchoice_invoke_change">Changing active hub</string>
    <string name="hubchoice_select_wait">Loading hub data</string>
    <string name="hubchoice_select_title">Select the hub to inspect</string>
    <string name="hubchoice_invoke_select_ok">Changed the active hub to HUBNAME</string>
    <string name="hubchoice_invoke_select_fail">Could not change active hub to inspect; please try again later</string>
    <string name="hubchoice_invoke_select_nochange">No change required</string>
    <string name="hubchoice_hubname_tag">HUBNAME</string>
    <string name="accountchoice_invoke_change">Changing active account</string>
    <string name="accountchoice_select_wait">Loading account data</string>
    <string name="accountchoice_select_title">Select the account to inspect</string>
    <string name="accountchoice_invoke_select_ok">Changed the active account to USERNAME</string>
    <string name="accountchoice_invoke_select_fail">Could not change active account to inspect; please try again later</string>
    <string name="accountchoice_invoke_select_nochange">No change required</string>
    <string name="accountchoice_username_tag">USERNAME</string>
    <string name="quit_dialog_title">Do you wish to quit?</string>
    <string name="quit_dialog_ok">Ok</string>
    <string name="quit_dialog_cancel">Cancel</string>
    <string name="quit_dialog_wait">Logging off and closing connections</string>
    <string name="test_default_title">API Debugger</string>
    <string name="test_complete_title">Test Results</string>
    <string name="test_complete_failed_title">Test Results - Failed</string>
    <string name="test_login_label">Account details</string>
    <string name="test_list_label">Tests to perform</string>
    <string name="test_run_label">START TESTS!</string>
    <string name="test_run_wait">Running tests</string>
    <string name="test_retry_label">Try another test</string>
    <string name="test_login_username_label">Username</string>
    <string name="test_login_password_label">Password</string>
    <string name="test_1_label">Test 1</string>
    <string name="test_1_description">Session key dependent tests. These are simple calls that mostly get values relevant to all AlertMe accounts.</string>
    <string name="test_2_label">Test 2</string>
    <string name="test_2_description">Hub-centric tests. Calls upon the API for hub details - and thus - the services a hub may have available.</string>
    <string name="test_3_label">Test 3</string>
    <string name="test_3_description">Device-centric tests. Stimulates the API for device details (based on existing devices on the first hub found)</string>
    <string name="test_4_label">Test 4</string>
    <string name="test_4_description">Event-centric tests. Stimulates the API for hub events (based on existing devices on the first hub found)</string>
    <string name="history_cleared">Cleared history cache</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_add_account">Add account</string>
    <string name="menu_select_account">Select account</string>
    <string name="menu_select_hub">Select hub</string>
    <string name="menu_about">About</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_history_clear">Clear history</string>
    <string name="splashpage_credits">exacat</string>
    <string name="infomation_dialog_dismiss">Ok</string>
    <string name="devicedetail_dialog_default_attr">Attribute</string>
    <string name="devicedetail_dialog_default_val">Value</string>
    <string name="deviceitem_default_battery">battery</string>
    <string name="deviceitem_default_status">status</string>
    <string name="deviceitem_default_name">sensor name</string>
    <string name="devicedetail_present">Currently present</string>
    <string name="devicedetail_notpresent">Unavailable</string>
    <string name="devicedetail_control_isoff">Press button to power on</string>
    <string name="devicedetail_control_ison">Press button to power off</string>
    <string name="devicedetail_dialog_dismiss">Ok</string>
    <string name="devicedetail_label_signal">Signal Strength</string>
    <string name="devicedetail_label_battery">Battery</string>
    <string name="devicedetail_label_temp">Temperature</string>
    <string name="devicedetail_label_power">Power</string>
    <string name="devicedetail_default_name">Device Name</string>
    <string name="devicedetail_default_type">Device Type</string>
    <string name="devicedetail_default_signal">0%</string>
    <string name="devicedetail_default_battery">0.0V</string>
    <string name="contdesc_behaviour_stat">[Current hub status]</string>
    <string name="contdesc_devicedetail_ico">[Device type]</string>
    <string name="contdesc_devicedetail_signal">[Signal strength]</string>
    <string name="contdesc_devicedetail_battery">[Battery remaining]</string>
    <string name="contdesc_devicedetail_presence">[Presence]</string>
    <string name="contdesc_people_keyfob">[Keyfob icon]</string>
</resources>