<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
	android:orientation="horizontal"
    android:padding="3dip"
    android:stretchColumns="1"
    android:background="#fff">
	<TableRow android:gravity="center_vertical">
   		<ImageView
   		    android:contentDescription="@string/contdesc_people_keyfob"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:id="@+id/people_icon"
			android:src="@drawable/ic_sensor_keyfob" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:id="@+id/person_name"
		    android:text="@string/people_default_fobname"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="15dip"
		    android:textColor="#777" />
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:gravity="right"
		    android:id="@+id/person_status"
		    android:layout_marginLeft="5dip"
		    android:layout_marginRight="15dip"
		    android:text="@string/people_default_fobstatus"
		    android:textColor="#555" />
		<ImageView
		    android:contentDescription="@string/contdesc_devicedetail_signal"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:id="@+id/person_signal_icon"
		    android:layout_marginRight="10dip"
			android:src="@drawable/ic_sensor_signal_0" />
		<ImageView
		    android:contentDescription="@string/contdesc_devicedetail_presence"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:id="@+id/person_presence_icon"
			android:src="@drawable/ic_keyfob_present" />
	</TableRow>
</TableLayout>