<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal"
    android:padding="3dip"
	android:stretchColumns="*"
    android:background="@color/page_background">
    <LinearLayout
		android:minHeight="45dip">
    	<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:src="@drawable/icon" />
        <TextView
        	android:id="@+id/behavehome_housename"        
            android:text="@string/systemname_default"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_marginLeft="10dip"
		    android:layout_marginRight="5dip"
            android:padding="3dip" />
    </LinearLayout>
	<TableRow
			android:gravity="center"
			android:layout_width="fill_parent">
		<LinearLayout
			android:gravity="center"
			android:minHeight="45dip"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			<TextView
				android:id="@+id/behavearmed_text_current"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:textSize="15sp"
				android:textColor="@color/page_text"
            	android:layout_marginRight="3dip"
				android:text="@string/behaviour_current_is_away" />
	    	<ImageView
	        	android:id="@+id/behavearmed_currentmode_icon"       
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:scaleType="center"
				android:src="@drawable/ic_home_status_lock_mini" />
	    </LinearLayout>
    </TableRow>
    
    <View
        android:layout_height="2dip"
	    android:layout_marginTop="30dip"
	    android:layout_marginBottom="30dip"
        android:background="#FF909090" />
	<TextView
		android:id="@+id/behavearmed_text_change_title"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:textSize="15sp"
		android:textColor="@color/page_text"
		android:text="@string/behaviour_dialog_message_change_mode" />
    
    <TableRow android:padding="3dip">
    	<LinearLayout android:gravity="center_horizontal">
			 <Button
				 android:id="@+id/behavehome_button_arm"        
			     android:layout_height="80dip"
			     android:layout_width="80dip"
			     android:background="@drawable/ic_home_status_home"
			     android:layout_marginRight="10dip" /><!-- android:onClick="selfDestruct" -->
    	</LinearLayout>
    </TableRow>
    <TableRow android:padding="3dip">
		<TextView
			android:id="@+id/behavearmed_text_home"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:textSize="16dip"
			android:textColor="@color/page_text"
			android:text="Disarm" />
    </TableRow>
    <Button
        android:id="@+id/behavearmed_cancel"
       	android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:layout_marginTop="40dip"
        android:padding="5dip"
        android:text="Cancel" />
	
</TableLayout>